Fixed contrast error

--- a/styles/styleGenerate.css
+++ b/styles/styleGenerate.css
@@ -143,7 +143,7 @@ button[type="reset"]:focus {
 #backBtn,
 #generateBtn {
     background-color: #4CAF50;
-    color: white;
+    color: black;
     border: none;
     border-radius: 5px;
     padding: 10px 20px;
